# kubemq-celery

./: .gitignore  README.md  pyproject.toml  run_all_examples.py
docs/: configuration.md  error-handling.md  getting-started.md  kubernetes.md  migration-guide.md  performance.md  troubleshooting.md
examples/: README.md  basic_task.py  benchmark.py  canvas_workflows.py  delayed_tasks.py  fastapi_integration.py  flask_integration.py  litestar_integration.py  monitoring.py  periodic_tasks.py  priority_routing.py  starlette_integration.py
examples/advanced_patterns/: benchmark.py  custom_task_class.py  idempotent_tasks.py  multi_app.py  task_annotations.py  task_binding.py  task_inheritance.py
examples/canvas/: chain.py  chain_of_groups.py  chord.py  chord_error_handling.py  chunks.py  complex_workflow.py  group.py  immutable_signatures.py  map.py  starmap.py
examples/connection/: auth_token.py  basic_broker.py  connection_timeout.py  env_var_config.py  grpc_options.py  mtls_connection.py  result_backend_config.py  tls_connection.py
examples/django_integration/: README.md  docker-compose.yaml  manage.py  requirements.txt
examples/django_integration/myapp/: tasks.py  views.py
examples/django_integration/myproject/: celery.py  settings.py  urls.py
examples/error_handling/: basic_retry.py  custom_retry_policy.py  dead_letter_queue.py  error_callbacks.py  exponential_backoff.py  on_failure_callback.py  reconnection.py  reject_and_requeue.py  task_acks_late.py  task_time_limit.py
examples/integrations/: aiohttp_integration.py  fastapi_integration.py  fastapi_websocket_progress.py  flask_factory_pattern.py  flask_integration.py  litestar_integration.py  starlette_integration.py
examples/integrations/django_integration/: manage.py  requirements.txt
examples/integrations/django_integration/myapp/: tasks.py  views.py
examples/integrations/django_integration/myproject/: celery.py  settings.py  urls.py
examples/kubernetes/: Dockerfile  deployment.yaml  docker-compose.yaml  keda-scaler.yaml
examples/monitoring/: celery_events.py  custom_event_consumer.py  flower_setup.py  inspect_active.py  progress_tracking.py  worker_control.py
examples/quickstart/: hello_world.py  send_and_get_result.py  worker_setup.py
examples/rate_limiting/: prefetch_multiplier.py  rate_limit.py  task_time_limits.py  worker_concurrency.py  worker_pool_options.py
examples/result_backend/: custom_result_serializer.py  group_results.py  ignore_result.py  result_backend_options.py  result_expiration.py  store_and_retrieve.py  task_states.py
examples/routing/: broadcast_tasks.py  dedicated_workers.py  default_queue_config.py  dynamic_routing.py  priority_queues.py  task_routes.py
examples/scheduling/: beat_crontab.py  beat_max_delay_warning.py  beat_solar.py  beat_timedelta.py  countdown_delay.py  dynamic_periodic_tasks.py  eta_scheduling.py  one_shot_scheduled.py
examples/serialization/: content_type_negotiation.py  custom_serializer.py  json_serializer.py  msgpack_serializer.py  pickle_serializer.py
examples/signals/: before_task_publish.py  custom_state_updates.py  task_prerun_postrun.py  task_revoked.py  task_success_failure.py  worker_signals.py
examples/testing/: eager_mode.py  local_development.py  mock_tasks.py  pytest_fixtures.py  test_canvas.py
src/kubemq_celery/: __init__.py  backend.py  base.py  exceptions.py  transport.py  utils.py
tests/: conftest.py  test_backend.py  test_base_channel.py  test_batch_receive.py  test_canvas.py  test_celery_e2e.py  test_channel.py  test_connection_lifecycle.py  test_exceptions.py  test_fanout_retry.py  test_integration.py  test_keepalive.py  test_registration.py  test_thread_safety.py  test_transport.py  test_transport_put.py  test_utils.py
