[project]
name = "kubemq-celery"
version = "1.0.0"
description = "KubeMQ transport for Celery task queues"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "KubeMQ"}]
keywords = ["kubemq", "celery", "kombu", "transport", "message-broker", "kubernetes"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Celery",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "kubemq>=4.1.0",
    "celery>=5.4",
    "kombu>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-celery>=1.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kubemq_celery"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "integration: integration tests that require a live KubeMQ broker",
    "e2e: Celery application tests that require a live KubeMQ broker",
]

[tool.coverage.run]
source = ["kubemq_celery"]

[tool.coverage.report]
fail_under = 80

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]
