[project]
name = "kubemq-celery"
version = "1.1.0"
description = "KubeMQ transport for Celery task queues"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "KubeMQ"}]
keywords = ["kubemq", "celery", "kombu", "transport", "message-broker", "kubernetes"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Celery",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "kubemq>=4.1.1",
    "celery>=5.4",
    "kombu>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0",
    "pytest-celery>=1.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
]
examples = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "flask>=3.0",
    "starlette>=0.30",
    "litestar>=2.0",
    "aiohttp>=3.9",
    "django>=4.2",
    "django-celery-beat>=2.5",
    "django-celery-results>=2.5",
    "msgpack>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kubemq_celery"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v --timeout=30"
markers = [
    "integration: integration tests that require a live KubeMQ broker",
    "e2e: Celery application tests that require a live KubeMQ broker",
    "unit: fast unit tests with mocked dependencies",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["kubemq_celery"]

[tool.coverage.report]
fail_under = 95

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "pytest-celery>=1.0",
    "pytest-timeout>=2.0",
    "ruff>=0.15.9",
]
